Começo da criação dos controllers das views